# Handling_HTTP_Requests_With_Django

./: README.md  db.sqlite3  pyproject.toml
task4/: settings.py  urls.py
users/: admin.py  data.json  forms.py  models.py  permissions.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_parent_login_alter_student_login_and_more.py  0002_alter_subject_subjectname.py  0003_alter_student_subjects.py
users/views/: __init__.py  login.py  logout.py  parents.py  register.py  students.py  subjects.py
